--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
+	id 'java'
+	id 'idea'
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
-	id 'java'
 }
 
 group = 'br.com.letscode'
@@ -19,15 +20,28 @@ repositories {
 }
 
 dependencies {
+	implementation('io.springfox:springfox-boot-starter:3.0.0')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.auth0:java-jwt:4.2.1'
+
 	compileOnly 'org.projectlombok:lombok'
+
 	runtimeOnly 'com.h2database:h2'
+
 	annotationProcessor 'org.projectlombok:lombok'
+
+	testImplementation 'org.apache.groovy:groovy:4.0.1'
+	testImplementation 'io.rest-assured:rest-assured:5.2.0'
+	testImplementation 'io.rest-assured:xml-path:5.2.0'
+	testImplementation 'io.rest-assured:json-path:5.2.0'
+	testImplementation 'io.rest-assured:rest-assured-common:5.2.0'
+	testImplementation 'org.assertj:assertj-core:3.23.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+
 }
 
 tasks.named('test') {
